--- a/projetRL/index.html
+++ b/projetRL/index.html
@@ -10,25 +10,25 @@
 <nav>
 	<h1>Rocket League Fans</h1>
 	<ul>
-		<li><a href="index.html">Accueil</a></li>
-		<li><a href="liste.html">Articles</a>
+		<li><a class="scale-effect" href="index.html">Accueil</a></li>
+		<li><a class="scale-effect" href="liste.html">Articles</a>
 			<ul>
-				<li><a href="Equipes.html">Equipes</a></li>
-				<li><a href="Joueurs.html">Joueurs</a></li>
-				<li><a href="Techniques.html">Techniques</a></li>
+				<li><a class="scale-effect" href="Equipes.html">Equipes</a></li>
+				<li><a class="scale-effect" href="Joueurs.html">Joueurs</a></li>
+				<li><a class="scale-effect" href="Techniques.html">Techniques</a></li>
 			</ul>
 		</li>
-		<li><a href="#">Compétition</a>
+		<li><a class="scale-effect" href="#">Compétition</a>
 			<ul>
-				<li><a href="RLCS.html">RLCS</a></li>
-				<li><a href="ESL.html">ESL</a></li>
+				<li><a class="scale-effect" href="RLCS.html">RLCS</a></li>
+				<li><a class="scale-effect" href="ESL.html">ESL</a></li>
 			</ul>
 		</li>
-		<li><a href="Contacter.html">Contacter</a></li>
-		<li><a href="#">Connexion</a>
+		<li><a class="scale-effect" href="Contacter.html">Contacter</a></li>
+		<li><a class="scale-effect" href="Connexion.html">Connexion</a>
 			<ul>
-				<li><a href="Connexion.html">Se connecter</a></li>
-				<li><a href="Inscription.html">S'inscrire</a></li>
+				<li><a class="scale-effect" href="Connexion.html">Se connecter</a></li>
+				<li><a class="scale-effect" href="Inscription.html">S'inscrire</a></li>
 			</ul>
 		</li>
 	</ul>
