--- a/projetRL/index.html
+++ b/projetRL/index.html
@@ -34,5 +34,20 @@
 	</ul>
 </nav>
 </header>
+
+<section class="description">
+	
+	<h2>Qu'est ce que Rocket League?</h2>
+	<p id="description"> 
+		<b>
+		Rocket League est un jeu vidéo de sport devéloppé par Psyonix. Il est inspiré du football : deux équipes, composée de un a quatre joueurs conduisant des voitures, doivent frapper un ballon afin de marquer dans le but adverse. Les voitures sont équipées de boost et peuvent sauter, permettant de jouer le ballon dans les airs. Des mises a jour du jeu incluent également d'autres modes de jeu, se rapprochant du Basketball ou du Hockey sur glace. Le jeu est reconnu pour son style de jeu unique et a recu de nombreuses distinctions. Le studio revendique plus de 10 millions de ventes en deux ans, au premier trimestre 2017, et 60 millions de joueurs en 2019. Devant le succes grandissant du jeu, il fut racheté par Epic Games.
+		</b>
+	</p>
+</section>
+
+<section class="video-presentation">
+	<iframe width="100%" height="600" src="https://www.youtube.com/embed/qwzw9eZzn3Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</section>
+
 </body>
 </html>
