Page Compétion, RLCS et ESL + Modification visuel #1
Ajout des pages compétition , rlcs et esl , ainsi que le foncissement de l'image de fond pour faire ressortir le texte.

- Ajout de texte réel dans la page articles
- Retrait des liens vers les pages joueurs et techniques qui ne sont pas complète

#1

--- a/projetRL/Competition.html
+++ b/projetRL/Competition.html
@@ -34,39 +34,31 @@
 	</ul>
 </nav>
 </header>
-<h2> 1 : Les Équipes </h2>
+<h2> RLCS </h2>
 <article id="article">
 
 <div class="articles">
-	<a href="Equipes.html">
-		<img src="decoration/equipes.jpg" class="image" alt="equipes">
+	<a href="RLCS.html">
+		<img src="decoration/rlcs.jpg" class="image" alt="equipes">
 	</a>
 	<p>
 		<b>
-				Rocket League possède une multitude d'organisation différente qui forme des équipes afin de s'affronter dans les tournois internationaux. Dans cet article certaines équipes populaires sont présentées.
+				Les Rocket League Championship Series (souvent abrégé en RLCS) sont des tournois de sport électronique organisés par Psyonix sur le jeu Rocket League. Il s'agit des tournois les plus prestigieux de l'esport Rocket League.
 		</b>
 	</p>
 </div>
-<h3> 2 : Les Joueurs </h3>
+<h3> ESL </h3>
 <div class="articles">
-
-	<img src="decoration/joueurs.jpg" class="image" alt="joueurs">
+	<a href="ESL.html">
+		<img src="decoration/esl.jpg" class="image" alt="joueurs">
+	</a>
 	<p>
 		<b>
-				Les joueurs de rocket league sont récrutés par des organisations, cependant il est très rare qu'un joueur reste dans la même organisation durant toute sa carrière. Cet article présente les joueurs les plus connus et leurs accomplissements. - À venir
+				ESL (anciennement Electronic Sports League, Ligue de sport électronique en français) est une ligue pour les joueurs de sport électronique (aussi appelé esport). Fondée en 1997 sous le nom de Deutsche Clanliga (DeCL), Ligue de Clan Allemande, elle est la ligue la plus âgée de ce type avec environ 7 800 000 utilisateurs annoncés et plus de 12 671 345 matches joués répartis dans 97 412 tournois différents.
 		</b>
 	</p>
 </div>
-<h4> 3 : Les Techniques </h4>
-<div class="articles">
 
-	<img src="decoration/techniques.jpg" class="image" alt="techniques">
-	<p>
-		<b>
-				Rocket League possède un grand nombre de technique spéciale afin de mieux se déplacer sur le terrain ou même des techniques avancées qui sont utilisées afin de marquer des buts incroyables. Cet article présente les méchaniques du jeu les plus impréssionantes. - À venir
-		</b>
-	</p>
-</div>
 </article>
 </body>
 </html>
