--- a/projetRL/Connexion.html
+++ b/projetRL/Connexion.html
@@ -16,11 +16,11 @@
 		<li><a class="scale-effect" href="liste.html">Articles</a>
 			<ul>
 				<li><a class="scale-effect" href="Equipes.html">Equipes</a></li>
-				<li><a class="scale-effect" href="Joueurs.html">Joueurs</a></li>
-				<li><a class="scale-effect" href="Techniques.html">Techniques</a></li>
+				<li><a class="scale-effect" >Joueurs</a></li>
+				<li><a class="scale-effect" >Techniques</a></li>
 			</ul>
 		</li>
-		<li><a class="scale-effect" href="#">Compétition</a>
+		<li><a class="scale-effect" href="Competition.html">Compétition</a>
 			<ul>
 				<li><a class="scale-effect" href="RLCS.html">RLCS</a></li>
 				<li><a class="scale-effect" href="ESL.html">ESL</a></li>
